<resources>
    <string name="app_name">TODO</string>
    <string name="task_list">Task List</string>
    <string name="task_title">Task Title</string>
    <string name="description">Description</string>
    <string name="add_new_task">Add New Task</string>
    <string name="add_task">Add Task</string>
    <string name="save">Save</string>
    <string name="no_task_found">No Task Found</string>
    <string name="view_task">View Task</string>
    <string name="diary_app">Diary App</string>
    <string name="diary">Diary</string>
    <string name="save_your_memories">Save Your Memories</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_sign_up">Welcome to sign Up</string>
    <string name="enter_your_e_mail">Enter Your E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="login"><u> Login </u></string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="sign_up_with_facebook">Sign Up With FaceBook</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="log">Login</string>
    <string name="upload_your_image">Upload Your profile Image</string>
    <string name="web_client_id">243470221116-s66des3e11u1g96t6j6ht5hbnetksrek.apps.googleusercontent.com</string>

</resources>