<?xml version="1.0" encoding="utf-8"?>
<layout>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewTaskActivity">

     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/white">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/add_new_task"
             android:textSize="20sp"
             android:fontFamily="@font/opensansregular"
             android:textColor="@color/black"/>

     </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/layout"/>


        <TextView
            android:id="@+id/add_tesk_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            app:layout_constraintTop_toBottomOf="@id/view_1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#384357"
            android:fontFamily="@font/opensanssemibold"/>

            <EditText
                android:id="@+id/task_edt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/add_tesk_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/task_background"
                android:layout_margin="10dp"
                android:hint="Enter Task"
                android:textColorHint="#AEAEAE"
                android:padding="10dp"
                android:textColor="@color/black" />

        <Button
            android:id="@+id/save_task"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/task_edt"
            app:layout_constraintStart_toStartOf="@id/task_edt"
            app:layout_constraintEnd_toEndOf="@id/task_edt"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/opensansregular"
            android:textSize="25sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>